Added basic components + start on the store components logic

--- a/components/ui/badge/badge.module.scss
+++ b/components/ui/badge/badge.module.scss
@@ -1,13 +1,17 @@
-.button {
+.badge {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  padding: var(--spacing-s) var(--spacing-xl);
-  border-radius: var(--spacing-m);
+  padding: var(--spacing-xs) var(--spacing-s);
+  border-radius: var(--spacing-xs);
   border: none;
-  text-transform: uppercase;
-  font-weight: 600;
-  letter-spacing: 0.1em;
+  margin-right: var(--spacing-xs);
+  margin-bottom: var(--spacing-xs);
+
+  &:last-of-type {
+    margin-right: 0;
+    margin-bottom: var(--spacing-xs);
+  }
 
   &:hover {
     cursor: pointer;
@@ -25,7 +29,8 @@
 }
 
 .outline {
-  border: solid 2px;
+  background: none;
+  border: solid 1px rgba(var(--color-stable), 1);
 }
 
 .boxShadow {
@@ -35,4 +40,8 @@
 .disabled {
   opacity: 0.5;
   pointer-events: none;
+}
+
+.active {
+  border: solid 1px rgba(var(--color-positive), 1);
 }
