--- a/components/ui/tile/tile.module.scss
+++ b/components/ui/tile/tile.module.scss
@@ -20,3 +20,21 @@
 .overflow {
   overflow: inherit;
 }
+
+.header {
+  padding: var(--spacing-m);
+  border-bottom: solid 1px rgba(var(--color-stable), 1);
+}
+
+.body {
+  padding: var(--spacing-m);
+}
+
+.footer {
+  padding: var(--spacing-m);
+  border-top: solid 1px rgba(var(--color-stable), 1);
+}
+
+.button {
+  padding: var(--spacing-s);
+}
