Added store page id + Component product and products

--- a/components/storeForm/storeForm.module.scss
+++ b/components/storeForm/storeForm.module.scss
@@ -1,7 +1,7 @@
 .storeForm {
   display: flex;
   flex-direction: column;
-  margin-left: var(--spacing-m);
+  margin-left: var(--spacing-xs);
 }
 
 .tile {
