--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -30,6 +30,7 @@
   --radius-m: 10px;
   --radius-l: 15px;
   --shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  --shadow-s: rgba(17, 17, 26, 0.05) 0px 1px 0px, rgba(17, 17, 26, 0.1) 0px 0px 8px;
   --shadow-m: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
     rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
   --global-width: 1200px;
