--- a/components/products/products.module.scss
+++ b/components/products/products.module.scss
@@ -12,6 +12,11 @@
   &:last-of-type {
     margin-right: var(--spacing-m);
   }
+
+  &:hover {
+    opacity: 0.8;
+    cursor: pointer;
+  }
 }
 
 .button {
