--- a/components/ui/counter/counter.module.scss
+++ b/components/ui/counter/counter.module.scss
@@ -1,7 +1,7 @@
 .counter {
   display: flex;
   align-items: center;
-  border: 1px solid rgba(var(--color-stable), 1);
+  // border: 1px solid rgba(var(--color-stable), 1);
 }
 
 .button {
