Added payment method to checkout

--- a/components/checkout/checkout.module.scss
+++ b/components/checkout/checkout.module.scss
@@ -37,3 +37,13 @@
   align-items: center;
   margin-left: var(--spacing-xs);
 }
+
+.button {
+  border-radius: 0;
+}
+
+.payment {
+
+  width: 100%;
+  display: flex;
+}
