--- a/components/products/products.module.scss
+++ b/components/products/products.module.scss
@@ -1,18 +1,11 @@
 .products {
   display: flex;
+  flex-wrap: wrap;
+  gap: var(--spacing-l);
+  height: 100%;
 }
 
 .product {
-  margin-left: var(--spacing-m);
-
-  &:first-child {
-    margin-left: 0;
-  }
-
-  &:last-of-type {
-    margin-right: var(--spacing-m);
-  }
-
   &:hover {
     opacity: 0.8;
     cursor: pointer;
@@ -22,4 +15,5 @@
 .button {
   width: 140px;
   height: 140px;
+  margin: 0;
 }
