Added component actionCard + breadcrumbs + refactored stores styling

--- a/components/helper/icon/icon.module.scss
+++ b/components/helper/icon/icon.module.scss
@@ -63,6 +63,12 @@
   }
 }
 
+.icon-energized {
+  path {
+    fill: rgba(var(--color-energized));
+  }
+}
+
 .icon-balanced {
   svg {
     color: rgba(var(--color-balanced)); ;
