--- a/components/storeForm/storeForm.module.scss
+++ b/components/storeForm/storeForm.module.scss
@@ -17,3 +17,13 @@
 .remove {
   padding: var(--spacing-s) var(--spacing-xs);
 }
+
+.types {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 7px;
+}
+
+.badge {
+  padding: 10px 15px;
+}
