--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -5,10 +5,10 @@
   --color-light: 255, 255, 255;
   --color-positive: 41, 145, 250;
   --color-balanced: 82, 196, 26;
-  --color-royal: 165, 177, 247;
+  --color-royal: 80, 69, 224;
   --color-assertive: 166, 29, 35;
-  --color-energized: 253, 180, 0;
-  --color-stable: 231, 235, 240;
+  --color-energized: 249, 144, 0;
+  --color-stable: 208, 208, 208;
   --color-stable-500: 148, 148, 154;
   --color-stable-700: 112, 112, 118;
   --font-xxs: 12px;
@@ -42,7 +42,7 @@
 
 html, body {
   overflow-x: hidden;
-  background-color: #f4f6f9;
+  background-color: #F9FBFC;
 }
 
 body {
