Added new styling for products page

--- a/components/checkout/checkout.module.scss
+++ b/components/checkout/checkout.module.scss
@@ -7,6 +7,7 @@
   width: 100%;
   min-height: 500px;
   margin-top: var(--spacing-l);
+  border: solid 1px rgba(var(--color-stable), 1);
 
   @include large {
     max-width: 350px;
@@ -47,6 +48,7 @@
 
 .button {
   border-radius: 0;
+  background: #512da8;
 }
 
 .payment {
