--- a/components/ui/container/container.module.scss
+++ b/components/ui/container/container.module.scss
@@ -1,4 +1,5 @@
 .container {
+  width: 100%;
   padding: var(--spacing-xxl);
   background-color: rgba(var(--color-light), 1);
   border: solid 1px rgba(var(--color-stable), 1);
