--- a/components/ui/heading/heading.module.scss
+++ b/components/ui/heading/heading.module.scss
@@ -1,3 +1,12 @@
 .title {
   margin-bottom: var(--spacing-s);
 }
+
+.content {
+  display: flex;
+  align-items: center;
+}
+
+.icon {
+  margin-left: var(--spacing-xs);
+}
