--- a/components/store/store.module.scss
+++ b/components/store/store.module.scss
@@ -1,5 +1,9 @@
 .store {
   position: relative;
+
+  &:hover {
+    opacity: 0.7;
+  }
 }
 
 .tile {
@@ -21,4 +25,8 @@
   right: 0;
   padding: var(--spacing-s);
   z-index: 1;
+}
+
+.confirm {
+  display: flex;
 }
