Added form validation for store and product forms

--- a/components/ui/modal/modal.module.scss
+++ b/components/ui/modal/modal.module.scss
@@ -13,7 +13,7 @@
   height: auto;
   border-radius: var(--radius-l);
   border: solid 1px rgba(var(--color-stable), 1);
-  box-shadow: var(--shadow-m);
+  box-shadow: var(--shadow-s);
   margin: var(--spacing-m);
 }
 
