--- a/components/product/product.module.scss
+++ b/components/product/product.module.scss
@@ -1,3 +1,7 @@
+.product {
+  position: relative;
+}
+
 .tile {
   display: flex;
   position: relative;
@@ -5,15 +9,6 @@
   width: 140px;
   height: 140px;
   border: solid 1px rgba(var(--color-stable), 1);
-}
-
-.index {
-  position: absolute;
-  top: 0;
-  right: 0;
-  background: rgba(var(--color-energized), 0.5);
-  padding: 3px var(--spacing-m);
-  border-bottom-left-radius: var(--radius-m);
 }
 
 .wrapper {
@@ -50,4 +45,12 @@
   .tile {
     box-shadow: 0 0 0 2px rgba(var(--color-energized), 1);
   }
+}
+
+.delete {
+  position: absolute;
+  top: 0;
+  right: 0;
+  padding: var(--spacing-s);
+  z-index: 1;
 }
