--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -8,7 +8,8 @@
   --color-royal: 80, 69, 224;
   --color-assertive: 223, 15, 15;
   --color-energized: 249, 144, 0;
-  --color-stable: 208, 208, 208;
+  --color-stable: 234, 234, 234;
+  --color: rgb();
   --color-stable-500: 148, 148, 154;
   --color-stable-700: 112, 112, 118;
   --font-xxs: 12px;
@@ -62,6 +63,10 @@ ul {
 
 a {
   text-decoration: none;
+  
+  p {
+    color: rgba(var(--color-royal), 1) !important;
+  }
 }
 
 h1,
