Added component Chart + daily sales

--- a/components/transactions/transactions.module.scss
+++ b/components/transactions/transactions.module.scss
@@ -1,3 +1,7 @@
+.transactions {
+  width: 100%;
+}
+
 .item {
   display: flex;
   align-items: center;
@@ -7,6 +11,10 @@
   background-color: rgba(var(--color-light), 1);
   border-radius: var(--radius-m);
   border: solid 1px rgba(var(--color-stable), 1);
+
+  &:first-child {
+    margin-top: 0;
+  }
 }
 
 .signature {
