Added new database function calls for sales

--- a/styles/store.module.scss
+++ b/styles/store.module.scss
@@ -25,3 +25,9 @@
 .transactions {
   width: 100%;
 }
+
+.chart {
+  border-top-right-radius: 0;
+  border-top-left-radius: 0;
+  border-top: none;
+}
