Added store product count

--- a/components/transactions/transactions.module.scss
+++ b/components/transactions/transactions.module.scss
@@ -22,6 +22,7 @@
   max-width: 10ch;
   text-overflow: ellipsis;
   white-space: nowrap;
+  color: rgba(var(--color-royal), 1) !important;
 }
 
 .iconWrapper {
