--- a/components/actionCard/actionCard.module.scss
+++ b/components/actionCard/actionCard.module.scss
@@ -6,7 +6,7 @@
   padding: var(--spacing-m);
   border-radius: var(--radius-m);
   min-height: 140px;
-  max-width: 200px;
+  width: 200px;
 }
 
 .title {
