--- a/components/ui/empty/empty.module.scss
+++ b/components/ui/empty/empty.module.scss
@@ -4,9 +4,9 @@
   justify-content: center;
   align-items: center;
   width: 100%;
-  height: 100%;
   border: dashed 1px rgba(var(--color-stable), 1);
   border-radius: var(--radius-m);
+  min-height: 440px;
 }
 
 .title {
