--- a/components/actionCard/actionCard.module.scss
+++ b/components/actionCard/actionCard.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/mixins.scss";
+
 .actionCard {
   display: flex;
   flex-direction: column;
@@ -6,7 +8,11 @@
   padding: var(--spacing-m);
   border-radius: var(--radius-m);
   min-height: 140px;
-  width: 200px;
+  width: 100%;
+
+  @include small {
+    width: 200px;
+  }
 }
 
 .title {
