--- a/components/store/store.module.scss
+++ b/components/store/store.module.scss
@@ -1,8 +1,15 @@
+@import "../../styles/mixins.scss";
+
 .store {
   position: relative;
+  width: 100%;
 
   &:hover {
     opacity: 0.7;
+  }
+
+  @include small {
+    width: 200px;
   }
 }
 
@@ -10,9 +17,13 @@
   display: flex;
   justify-content: space-around;
   flex-direction: column;
-  width: 200px;
+  width: 100%;
   height: 140px;
   border: solid 1px rgba(var(--color-stable), 1);
+
+  @include small {
+    width: 200px;
+  }
 }
 
 .wrapper {
