--- a/styles/home.module.scss
+++ b/styles/home.module.scss
@@ -1,14 +1,31 @@
+@import "../styles/mixins.scss";
+
 .wallet {
   display: flex;
-  justify-content: flex-end;
+  justify-content: flex-start;
+
+  @include small {
+    flex-direction: flex-end;
+  }
 }
 
 .wrapper {
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
+  gap: 10px;
+
+  @include small {
+    flex-direction: row;
+  }
 }
 
 .actionCards {
   display: flex;
+  flex-direction: column;
   gap: 20px;
+
+  @include small {
+    flex-direction: row;
+  }
 }
