--- a/components/checkout/checkout.module.scss
+++ b/components/checkout/checkout.module.scss
@@ -5,25 +5,22 @@
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
-  min-height: 500px;
+  min-height: 720px;
+  height: 100%;
   margin-top: var(--spacing-l);
   border: solid 1px rgba(var(--color-stable), 1);
 
 
   @include medium {
-    max-width: 250px;
-    margin-top: 0;
-  }
-
-  @include large {
     max-width: 350px;
     margin-top: 0;
   }
-
 }
 
 .items {
   padding: var(--spacing-xl);
+  max-height: 530px;
+  overflow-x: hidden;
 }
 
 .item {
