--- a/components/ui/container/container.module.scss
+++ b/components/ui/container/container.module.scss
@@ -1,7 +1,13 @@
+@import "../../../styles/mixins.scss";
+
 .container {
   width: 100%;
-  padding: var(--spacing-xxl);
+  padding: var(--spacing-l);
   background-color: rgba(var(--color-light), 1);
   border: solid 1px rgba(var(--color-stable), 1);
   border-radius: var(--radius-m);
+
+  @include xlarge {
+    padding: var(--spacing-xxl);
+  }
 }
